roxctl/connectivity-map/testdata/demo-app-with-routes-and-ingress/route-world-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-world
  namespace: routeworld
spec:
  port:
    targetPort: 8060
  to:
    kind: Service
    name: route-world
    weight: 100
